[metadata]
name = python-don
version = 1.0.0
summary = Diagonising Openstack Network
description-file = README.md
license = Apache Software License
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    don

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

